k8s/base/services/media/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - homeserver-2
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.15
          ports:
            - containerPort: 8989
              name: webui
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: data
          persistentVolumeClaim:
            claimName: media-data
      restartPolicy: Always
