k8s/base/services/media/sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  ports:
    - port: 8989
      targetPort: 8989
      name: webui
  selector:
    app: sonarr
