k8s/base/services/media/sonarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`sonarr.lffl.internal`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: keycloak-forward-auth
          namespace: forward-auth
